--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,30 +1,42 @@
 {
-  "name": "stddecho",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "redecho",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
+    "@expo-google-fonts/josefin-sans": "^0.2.0",
+    "@react-native-clipboard/clipboard": "^1.9.0",
     "@react-navigation/native": "^6.0.6",
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
+    "@react-navigation/native-stack": "^6.2.5",
+    "expo": "^44.0.3",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "~10.0.4",
     "native-base": "^3.2.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-pager-view": "5.4.9",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react": "17.0.2",
+    "react-native": "0.66.4",
+    "react-native-dots-pagination": "^0.2.0",
+    "react-native-pager-view": "^5.4.9",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.1",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.66.2",
+    "react-test-renderer": "17.0.2"
   },
-  "private": true
+  "jest": {
+    "preset": "react-native"
+  }
 }
