--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,13 +14,15 @@
     "@react-native-clipboard/clipboard": "^1.9.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "expo": "^44.0.3",
+    "expo": "^44.0.4",
     "expo-app-loading": "~1.3.0",
     "expo-font": "~10.0.4",
+    "expo-linear-gradient": "~11.0.0",
     "native-base": "^3.2.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-dots-pagination": "^0.2.0",
+    "react-native-eject": "^0.1.2",
     "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
@@ -38,5 +40,12 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "expo": {
+    "autolinking": {
+      "exclude": [
+        "expo-file-system"
+      ]
+    }
   }
 }
