--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -21,6 +21,7 @@
     "native-base": "^3.2.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-algo": "^0.1.7",
     "react-native-dots-pagination": "^0.2.0",
     "react-native-eject": "^0.1.2",
     "react-native-pager-view": "^5.4.9",
