--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redecho",
+  "name": "DeCHO",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,24 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@expo-google-fonts/josefin-sans": "^0.2.0",
+    "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-clipboard/clipboard": "^1.9.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "expo": "^44.0.4",
-    "expo-app-loading": "~1.3.0",
-    "expo-font": "~10.0.4",
-    "expo-linear-gradient": "~11.0.0",
     "native-base": "^3.2.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-algo": "^0.1.7",
+    "react-native-dotenv": "^3.3.1",
     "react-native-dots-pagination": "^0.2.0",
     "react-native-eject": "^0.1.2",
+    "react-native-fast-image": "^8.5.11",
     "react-native-pager-view": "^5.4.9",
+    "react-native-qrcode-generator": "^1.2.2",
+    "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "react-native-webview": "^11.17.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -41,12 +42,5 @@
   },
   "jest": {
     "preset": "react-native"
-  },
-  "expo": {
-    "autolinking": {
-      "exclude": [
-        "expo-file-system"
-      ]
-    }
   }
 }
